[project]
name = "hello_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nikmosi", email = "i@nikmosi.ru"},
]
dependencies = [
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-timeout>=2.3.1",
]

[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
